# Ledgerly

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vercel.json
.cursor/agent/: dev.md  harness.md  testor.md
.cursor/context/: 0.3.3_context.md  0.3.4_context.md  0.6.0_context.md  0.7.0_context.md  main.md
.cursor/harness/: btn_opt_review.md  btn_opt_testor.md  discover_news_review.md  feat_camera_testor.md  home_tab_opt_review.md  login_and_tab_review.md  login_opt_review.md  project_init_review.md  (+1 more)
api/: health.test.ts  health.ts  map-evidence-scheme.test.ts  parse-evidence.test.ts  parse-origin-data.test.ts
apps/api/: pyproject.toml
apps/api/scripts/: export_openapi.py
apps/api/src/creator_cfo_api/: app.py  config.py  main.py
apps/api/src/creator_cfo_api/routes/: __init__.py  bootstrap.py  health.py
apps/api/src/creator_cfo_api/schemas/: __init__.py  bootstrap.py
apps/api/tests/: test_bootstrap.py  test_health.py
docs/: architecture.md  development.md  gnucash-storage-capability-gaps.md  sdk-formalization-plan.md  test-cases-excel.csv  test-cases.md  testing.md  upload-planner-workflow.md
openapi/: openapi.yaml
prd/: CreatorCFO-PRD.md  CreatorCFO竞品调研报告.md  Ledgerly-PRD.md  Ledgerly竞品调研报告.md  bookkeeping-design-concept-prd.md  bookkeeping-prd.md  data_scheme_design_summary_v4.md  mobile-app-next-slice-prd.md  prd.md  记账.md
scripts/: generate_sample_database_packages.mjs
tests/: README.md
(+229 files in other folders)
